[package]
name = "proc_detour"
version = "0.0.1"
authors = ["Radviger <radviger@gmail.com>"]
description = "A macro crate for detour metadata creation"
keywords = ["detour"]
edition = "2021"

[lib]
proc-macro = true

[dependencies]
quote = "1"
proc-macro2 = "1.0"
syn = { version = "2.0", features = ["full"] }
heck = "0.5"